# high-frequency-transaction-system

./: .env.example  .gitignore  COMPARISON_DIAGRAM.md  CONCURRENCY_CONTROL.md  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  alembic.ini  demo_concurrency_control.py  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 20251128_000000_001_initial_models.py
app/: __init__.py  main.py  worker.py
app/api/: deps.py
app/api/v1/: router.py  (+1 more)
app/core/: __init__.py  celery_app.py  config.py  exceptions.py
app/db/: __init__.py  base.py  session.py
app/models/: __init__.py  transaction.py  user.py  wallet.py
app/schemas/: __init__.py  transaction.py  user.py  wallet.py
app/services/: transaction_service.py
tests/integration/: test_celery_integration.py
tests/properties/: test_api_response_time_independence.py  test_celery_config_from_environment.py  test_config_validation.py  test_financial_decimal_precision.py  test_optimistic_locking_conflict_detection.py  test_pessimistic_locking_concurrency.py  test_task_logging.py  test_task_parameter_serializability.py  test_task_return_values.py  test_transaction_fk_integrity.py  test_transaction_id_uniqueness.py  test_transaction_schema_roundtrip.py  test_transfer_atomicity_on_failure.py  test_transfer_balance_conservation.py  test_transfer_creates_completed_transaction.py  test_user_email_uniqueness.py  test_user_schema_roundtrip.py  test_wallet_schema_roundtrip.py  test_wallet_user_constraint.py
tests/unit/: test_api_with_tasks.py  test_celery_config.py  test_tasks.py
(+6 files in other folders)
